update superset configs

--- a/docker/.env-non-dev
+++ b/docker/.env-non-dev
@@ -51,3 +51,6 @@ SUPERSET_SECRET_KEY=8yiS8Z08rzvAJWx
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
 MAPBOX_API_KEY=''
+DASHBOARD_NATIVE_FILTERS=true
+DASHBOARD_NATIVE_FILTERS_SET=true
+ENABLE_PROXY_FIX=True
