--- a/docker/.env
+++ b/docker/.env
@@ -51,3 +51,6 @@ SUPERSET_LOAD_EXAMPLES=yes
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
 MAPBOX_API_KEY=''
+DASHBOARD_NATIVE_FILTERS=true
+DASHBOARD_NATIVE_FILTERS_SET=true
+ENABLE_PROXY_FIX=True
